# rtm-attributes

./: .gitignore  Cargo.toml  README.md  status.do
tests/: expand.rs
tests/expand/custom/: attribute.expanded.rs  attribute.rs  derive.expanded.rs  derive.rs
tests/expand/default/: attribute.rs
tests/expand/regression/: attribute.expanded.rs  attribute.rs  derive.rs
